DEMO OSM/OCP4-istio/servicemesh/servicemesh-config/bookinfo/bookinfo-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: productpage
  namespace: bookinfo
spec:
  host: productpage
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: reviews
  namespace: bookinfo
spec:
  host: reviews
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ratings
  namespace: bookinfo
spec:
  host: ratings
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v2-mysql
    labels:
      version: v2-mysql
  - name: v2-mysql-vm
    labels:
      version: v2-mysql-vm
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: details
  namespace: bookinfo
spec:
  host: details
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---

##################################################################################################
# For MTLS enabled
##################################################################################################
# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: productpage
#   namespace: bookinfo
# spec:
#   host: productpage
#   trafficPolicy:
#     tls:
#       mode: ISTIO_MUTUAL
#   subsets:
#   - name: v1
#     labels:
#       version: v1
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: reviews
#   namespace: bookinfo
# spec:
#   host: reviews
#   trafficPolicy:
#     tls:
#       mode: ISTIO_MUTUAL
#   subsets:
#   - name: v1
#     labels:
#       version: v1
#   - name: v2
#     labels:
#       version: v2
#   - name: v3
#     labels:
#       version: v3
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: ratings
#   namespace: bookinfo
# spec:
#   host: ratings
#   trafficPolicy:
#     tls:
#       mode: ISTIO_MUTUAL
#   subsets:
#   - name: v1
#     labels:
#       version: v1
#   - name: v2
#     labels:
#       version: v2
#   - name: v2-mysql
#     labels:
#       version: v2-mysql
#   - name: v2-mysql-vm
#     labels:
#       version: v2-mysql-vm
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: details
#   namespace: bookinfo
# spec:
#   host: details
#   trafficPolicy:
#     tls:
#       mode: ISTIO_MUTUAL
#   subsets:
#   - name: v1
#     labels:
#       version: v1
#   - name: v2
#     labels:
#       version: v2
# ---
