DEMO OSM/OCP4-istio/servicemesh/servicemesh-config/bookinfo/virtualservice-users.yaml
#### specific version for user based on header end-user #####
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews
  http:
  # alejandro a v2
  - match:
    - headers:
        end-user:
          exact: alejandro
    route:
    - destination:
        host: reviews
        subset: v2
  # javi a v3
  - match:
    - headers:
        end-user:
          exact: javi
    route:
    - destination:
        host: reviews
        subset: v3
  # guillermo 3s delay
  - fault:
      delay:
        fixedDelay: 3s
        percentage:
          value: 100
    match:
    - headers:
        end-user:
          exact: guillermo
    route:
    - destination:
        host: ratings
        subset: v1
  # jason abort
  - fault:
      abort:
        httpStatus: 500
        percentage:
          value: 100
    match:
    - headers:
        end-user:
          exact: jason
    route:
    - destination:
        host: ratings
        subset: v2
  # default a v1
  - route:
    - destination:
        host: reviews
        subset: v1
---
