DEMO OSM/OCP4-istio/servicemesh/servicemesh-config/bookinfo/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v1
      weight: 100
# ---
##### 1 version specific for Safari, use with curl -A Safari #####
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: reviews
# spec:
#   hosts:
#   - reviews
#   http:
#   - match:
#     - headers:
#         baggage-user-agent:
#           regex: .*Safari.*
#     route:
#     - destination:
#         host: reviews
#         subset: v2
#   - route:
#     - destination:
#         host: reviews
#         subset: v1
# ---
